TAG: qcreports_db-6-0-16-30
DATE: 04/27/2021
STAFF: lec
b39-467/GO-Done report/GO_done.py

TAG: qcreports_db-6-0-16-29
DATE: 04/27/2021
STAFF: dbm
1) Remove assocload directory: move reports to assocload product

TAG: qcreports_db-6-0-16-28
DATE: 04/26/2021
STAFF: dbm
1) Remove egload directory: not used
2) Remove pirsfload directory: moved script to pirsfload product
3) qcr.shtml: Removed link to Unigene load (retired)

TAG: qcreports_db-6-0-16-27
DATE: 04/21/2021
STAFF: sc
WTS2-569 - updates to:
mgd/GXD_HTSampleNoAge.sql
mgd/GXD_SpecNoAge.sql
mgd/RECOMB_SpecNoAge.sql

TAG: qcreports_db-6-0-16-25
TAG: qcreports_db-6-0-16-24
DATE: 04/21/2021
STAFF: lec
WTS2-600/mgd/GXD_ImageCheck.sql
also removed egload/dummy.py : obsolete/not used

TAG: qcreports_db-6-0-16-23
TAG: qcreports_db-6-0-16-22
DATE: 04/14/2021, 04/21/2021
STAFF: lec
add go_cam.csh to qcnightly_reports.csh
${DBUTILS}/mgidbmigration/tr13272/go_cam.csh

TAG: qcreports_db-6-0-16-21
TAG: qcreports_db-6-0-16-20
DATE: 04/14/2021
STAFF: sc
WTS2-497 new report weekly/VOC_DODups.sql 

TAG: qcreports_db-6-0-16-19
DATE: 04/13/2021
STAFF: dbm
TR13481/New GO Text Load

TAG: qcreports_db-6-0-16-18
DATE: 04/08/2021
STAFF: lec
TR13307/Adding PMIDS from Noctua load into MGI

TAG: qcreports_db-6-0-16-17
DATE: 03/30/2021
STAFF: sc
TR13485/Fix bug in mgd/VOC_InvalidInferred.py - see TR

TAG: qcreports_db-6-0-16-16
DATE: 03/12/2021
STAFF: dbm
TR13379/Modifications to GO Stats

TAG: qcreports_db-6-0-16-15
DATE: 03/02/2021
STAFF: lec
TR13469/proisoformload/GAF2.2 changes

TAG: qcreports_db-6-0-16-14
DATE: 01/28/2021
STAFF: sc
TR13433 - New GO report: pm2gene Refs not in MGI
mgd/GO_PM2GeneRefsNotInMGI.py

TAG: qcreports_db-6-0-16-13
DATE: 01/26/2026
STAFF: dbm
1) MRK_GOUnknown.py: Exclude references tagged with GO:QC1_GOunknown_exclude
2) MRK_NoGO.py: Exclude references tagged with GO:QC4_NoGO_exclude
3) MRK_GOIEA.py: Exclude references tagged with GO:QC5_IEA-only_exclude

TAG: qcreports_db-6-0-16-12
DATE: 10/23/2020
STAFF: dbm