@@ -2,7 +2,17 @@
 #
 # Report:
 #
-# see fp output below
+# 1/A: J# : group = GO, stauts = (Chosen, Indexed), exclude workflow tag = 'GO:QC5_IEA-only_exclude'
+# 2/B: pubmed id : not null
+# 3/C: ref in GXD? : group = GXD, status in (Chosen, Indexed, Full-coded)
+# 4/D: mgi id
+# 5/E: feature type(s)
+# 6/F: symbol
+# 7/G: name
+# 8/H: DO associations term
+#      DO/J: if group = GO, status not in (Full-coded, Rejected)
+#      OR exclude workflow tag = 'GO:IEA-only_exclude'
+# 9/J: Curator Tag
 #
 # History:
 #
@@ -23,10 +33,6 @@ SPACE = reportlib.SPACE
 TAB = reportlib.TAB
 PAGE = reportlib.PAGE
 
-PUBMED = 29
-url = ''
-pdfurl = os.environ['PDFVIEWER_URL']
-
 fp = reportlib.init(sys.argv[0], outputdir = os.environ['QCOUTPUTDIR'], isHTML = 1)
 
 fp.write('''
@@ -37,20 +43,11 @@ symbol not like '[A-Z][A-Z][0-9][0-9][0-9][0-9][0-9][0-9]'
 symbol not like 'Gt(ROSA)26Sor'
 symbol not like 'ORF'
 
-1/A:  J# : group = GO, stauts = (Chosen, Indexed), exclude workflow tag = 'GO:QC5_IEA-only_exclude'
-2/B:  pubmed id : not null
-3/C:  ref in GXD? : group = GXD, status in (Chosen, Indexed, Full-coded)
-4/D:  mgi id
-5/E:  feature type(s)
-6/F:  symbol
-7/G:  name
-8/H:  DO associations term
-9/I:  J#s
-        DO/J: if group = GO, status not in (Full-coded, Rejected)
-        OR exclude workflow tag = 'GO:QC5_IEA-only_exclude'
 ''')
 
-results = db.sql('select url from ACC_ActualDB where _LogicalDB_key = %d ' % (PUBMED), 'auto')
+pdfurl = os.environ['PDFVIEWER_URL']
+url = ''
+results = db.sql('select url from ACC_ActualDB where _LogicalDB_key = 29', 'auto')
 for r in results:
         url = r['url']
 
@@ -84,14 +81,13 @@ db.sql('''
         ''', None)
 db.sql('create index markers_idx1 on markers(_Marker_key)', None)
 
-# 1/A:  J# : exclude workflow tag = 'GO:QC5_IEA-only_exclude'
+# 1/A:  J# : exclude workflow tag = 'GO:IEA-only_exclude'
 db.sql('''
         select distinct m.*, c._Refs_key, c.mgiid, c.pubmedid, c.jnumid, c.numericpart
         into temporary table refs
         from markers m , MRK_Reference r, BIB_Citation_Cache c
         where m._Marker_key = r._Marker_key
         and r._Refs_key = c._Refs_key
-        and c.pubmedid is not null
         and not exists (select 1 from BIB_Workflow_Tag t
                 where r._Refs_key = t._Refs_key
                 and t._Tag_key = 71460412
@@ -148,26 +144,26 @@ for r in results:
                 doLookup[key] = []
         doLookup[key].append(value)
 
-# 9/I:  J#s
+# 8/H:  J#s
 #         DO/J: if group = GO, status not in (Full-coded, Rejected)
-#         OR exclude workflow tag = 'GO:QC5_IEA-only_exclude'
+#         OR exclude workflow tag = 'GO:IEA-only_exclude'
 results = db.sql('''
         select distinct r._Marker_key, c.jnumid
         from refs r, MRK_DO_Cache d, BIB_Citation_Cache c
         where r._Marker_key = d._Marker_key
         and d._Refs_key = c._Refs_key
-        and exists (select 1 from BIB_Workflow_Status s
+        and not exists (select 1 from BIB_Workflow_Status s
                 where d._Refs_key = s._Refs_key
                 and s.isCurrent = 1
                 and s._Group_key = 31576666
-                and s._Status_key not in (31576674, 31576672)
+                and s._Status_key in (31576674,31576672)
         )
         union 
         select distinct r._Marker_key, c.jnumid
         from refs r, MRK_DO_Cache d, BIB_Citation_Cache c
         where r._Marker_key = d._Marker_key
         and d._Refs_key = c._Refs_key
-        and not exists (select 1 from BIB_Workflow_Tag t
+        and exists (select 1 from BIB_Workflow_Tag t
                 where r._Refs_key = t._Refs_key
                 and t._Tag_key = 71460412
                 )
@@ -179,8 +175,27 @@ for r in results:
         if key not in doRefsLookup:
                 doRefsLookup[key] = []
         doRefsLookup[key].append(value)
+#print(doRefsLookup)
 
 #
+#9/J: Curator Tag
+#
+results = db.sql('''
+        select distinct r._Refs_key, t.term
+        from refs r, BIB_Workflow_Tag tg, VOC_Term t
+        where r._Refs_key = tg._Refs_key
+        and tg._Tag_key = t._Term_key
+        and t.term like 'GO:IP_%'
+        ''', 'auto')
+tagLookup = {}
+for r in results:
+        key = r['_Refs_key']
+        value = r['term']
+        if key not in tagLookup:
+                tagLookup[key] = []
+        tagLookup[key].append(value)
+#print(tagLookup)
+
 # final select
 #
 
@@ -192,6 +207,8 @@ results = db.sql(' select * from refs order by symbol, numericpart ', 'auto')
 fp.write('\nNumber of rows: ' + str(len(results)))
 fp.write('\n\n')
 
+fp.write('\nJ# pubmed ID\tref in GXD?\tmgi ID\tfeature type\tsymbol\tname\tDO [J#]\tCurator tag\n\n')
+
 for r in results:
 
         refKey = r['_Refs_key']
@@ -199,9 +216,10 @@ for r in results:
 
         fp.write('<A HREF="%s%s">%s</A>' %(pdfurl, r['mgiid'], r['jnumid']) + TAB)
 
-        #if r['pubmedid'] != None:
-        purl = str.replace(url, '@@@@', r['pubmedid'])
-        fp.write('<A HREF="%s">%s</A>' % (purl, r['pubmedid']) + TAB)
+        if r['pubmedid'] != None:
+           purl = str.replace(url, '@@@@', r['pubmedid'])
+           fp.write('<A HREF="%s">%s</A>' % (purl, r['pubmedid']))
+        fp.write(TAB)
 
         if refKey in hasGxd:
                 fp.write('Y' + TAB)
@@ -214,15 +232,19 @@ for r in results:
                 fp.write('|'.join(featureLookup[markerKey]))
         fp.write(TAB)
 
-        fp.write(r['symbol'] + TAB)
+        fp.write('<A HREF="http://www.informatics.jax.org/marker/%s">%s</A>' % (r['markerid'], r['symbol']) + TAB)
+
         fp.write(r['name'] + TAB)
 
         if markerKey in doLookup:
-                fp.write('|'.join(doLookup[markerKey]))
-        fp.write(TAB)
+                fp.write('DO')
 
         if markerKey in doRefsLookup:
-                fp.write('|'.join(doRefsLookup[markerKey]))
+                fp.write('-' + '|'.join(doRefsLookup[markerKey]))
+        fp.write(TAB)
+
+        if refKey in tagLookup:
+                fp.write('|'.join(tagLookup[refKey]))
         fp.write(CRT)
 
 reportlib.finish_nonps(fp, isHTML = 1)	# non-postscript file
