@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-16-31
+DATE: 04/29/2021
+STAFF: lec
+b39/451/TR13463/changes to GO QC/MRK_GOIEA.py
+
 TAG: qcreports_db-6-0-16-30
 DATE: 04/27/2021
 STAFF: lec
